# OpenGLBoilerplate

./: CMakeLists.txt
res/: fragmentShader.glsl  vertexShader.glsl
src/: BodyModel.cpp  BodyModel.h  Camera.cpp  Camera.h  Humoid.cpp  Humoid.h  Mesh.h  MeshObject.h  MeshUtil.cpp  MeshUtil.h  Renderer.cpp  Renderer.h  TerrainMap.cpp  TerrainMap.h  main.cpp
